PECOBLR-1121 Separate jvm for allocator manager tests.