@@ -351,6 +351,10 @@
             <exclude>**/ProxyTest.java</exclude>
             <exclude>**/LoggingTest.java</exclude>
             <exclude>**/SSLTest.java</exclude>
+            <!-- Allocation manager tests need separate JVMs (see allocation-manager-tests execution) -->
+            <exclude>**/ArrowBufferAllocatorNettyManagerTest.java</exclude>
+            <exclude>**/ArrowBufferAllocatorUnsafeManagerTest.java</exclude>
+            <exclude>**/ArrowBufferAllocatorUnknownManagerTest.java</exclude>
           </excludes>
           <argLine>
             @{argLine}
@@ -362,6 +366,34 @@
             <java.util.logging.config.file>${project.basedir}/src/test/resources/logging.properties</java.util.logging.config.file>
           </systemPropertyVariables>
         </configuration>
+        <executions>
+          <!-- Separate execution for allocation manager tests - each needs its own JVM
+               because Arrow's DefaultAllocationManager is set once per JVM -->
+          <execution>
+            <id>allocation-manager-tests</id>
+            <goals>
+              <goal>test</goal>
+            </goals>
+            <configuration>
+              <includes>
+                <include>**/ArrowBufferAllocatorNettyManagerTest.java</include>
+                <include>**/ArrowBufferAllocatorUnsafeManagerTest.java</include>
+                <include>**/ArrowBufferAllocatorUnknownManagerTest.java</include>
+              </includes>
+              <excludes combine.self="override"/>
+              <forkCount>1</forkCount>
+              <reuseForks>false</reuseForks>
+              <argLine>
+                @{argLine}
+                -Dnet.bytebuddy.experimental=true
+              </argLine>
+              <systemPropertyVariables>
+                <com.databricks.jdbc.loggerImpl>JDKLOGGER</com.databricks.jdbc.loggerImpl>
+                <java.util.logging.config.file>${project.basedir}/src/test/resources/logging.properties</java.util.logging.config.file>
+              </systemPropertyVariables>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
